<resources>
    <string name="app_name">필드스코어</string>
    <string name="signUpTitle">회원가입</string>
    <string name="email_hint">이메일</string>
    <string name="id_hint">아이디</string>
    <string name="nickName_hint">닉네임</string>
    <string name="password_hint">패스워드</string>
    <string name="passwordConfirm_hint">패스워드 확인</string>
    <string name="privacyPolicyLink">개인정보동의</string>
    <string name="signUpSubmit_button">회원가입하기</string>
    <string name="toLogInActivity_button">로그인하기</string>
    <string name="logInSubmit_button">로그인</string>
    <string name="toSignIn_button">회원가입 하기</string>
    <string name="toFindPassword_button">비밀번호 찾기</string>
    <string name="findPasswordTitle">비밀번호 찾기</string>
    <string name="findPasswordSubmit_button">이메일로 패스워드 보내기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_par_total">36</string>
    <string name="hole">HOLE</string>
    <string name="total">합계</string>
    <string name="par">PAR</string>
    <string name="stroke">STROKE</string>
    <string name="choose_date">날짜를 선택해 주세요</string>
    <string name="setRounddate_title">라운딩 날짜 선택</string>
    <string name="email">Email</string>
    <string name="frag_name_round">라운드</string>
    <string name="frag_name_friend">친구</string>
    <string name="frag_name_stats">통계</string>
    <string name="facebook_application_id" translatable="false">313425279843511</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb313425279843511</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
