<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUpTitle_textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/signUpTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconContentDescription="email"
        app:helperText="이메일을 입력하세요"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpEmail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconContentDescription="email"
        app:helperText="패스워드를 입력하세요"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:hint="패스워드">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPassword_editText"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconContentDescription="패스워드 확인"
        app:helperText="패스워드를 한번 더 입력하세요"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:hint="패스워드 확인">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPasswordConfirm_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconContentDescription="email"
        app:helperText="하이디를 입력하세요"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:hint="아이디">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpId_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconContentDescription="email"
        app:helperText="닉네임을 입력하세요"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:hint="닉네임">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpNickname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/signUpSubmit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signUpSubmit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/toLogInActivity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLogInActivity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpSubmit_button" />

</LinearLayout>